# LibraryManagementSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  p1
include/: AVLTree.h  DataSet.h  admin.h  book.h  borrowInfo.h  list.h  user.h
include/class/: admin.h  book.h  borrowInfo.h  user.h
include/data/: AVLTree.h  Data.cpp  DataBase.h  DataSet.h  RBTree.h  list.h
include/enum/: AdminEnum.h  BookEnum.h  BorrowInfoEnum.h  UserEnum.h
include/util/: normUtil.h
resource/: res.qrc
resource/book/: bookInfo.json
src/: CMakeLists.txt  main.cpp
src/class/: admin.cpp  book.cpp  borrowInfo.cpp  user.cpp
src/data/: DataBase.cpp
src/enum/: AdminEnum.cpp  BookEnum.cpp  BorrowInfoEnum.cpp  UserEnum.cpp
src/util/: DataSet.cpp  normUtil.cpp
src/view/: bookinfodialog.cpp  bookmanage.cpp  borrowhistory.cpp  login.cpp  mainwindow.cpp  modifyingo.cpp  schemedialog.cpp  test.cpp  usermanage.cpp
src/view/Forms/: bookinfodialog.ui  bookmanage.ui  borrowhistory.ui  login.ui  mainwindow.ui  modifyinfo.ui  schemedialog.ui  usermanage.ui
src/view/Headers/: bookinfodialog.h  bookmanage.h  borrowhistory.h  login.h  mainwindow.h  modifyinfo.h  schemedialog.h  test.h  usermanage.h
tst/: AVLTreeTests.cpp  CMakeLists.txt  main.cpp
tst/tst_cpp/: AVLTreeTests.cpp  DataSetTests.cpp  DatabaseTests.cpp  ListTests.cpp  RedBlackTreeTests.cpp
